# torch-spex

./: README.md  pyproject.toml  tox.ini
.github/: lint.yaml
.github/workflows/: lint.yaml  test.yaml  tests.yaml
spex/: README.md  __init__.py  spherical_expansion.py
spex/angular/: __init__.py  solid_harmonics.py  spherical_harmonics.py
spex/cutoff/: README.md  __init__.py
spex/engine/: README.md  __init__.py  dicts.py  spec.py  specable.py
spex/metatensor/: __init__.py  soap_power_spectrum.py  spherical_expansion.py
spex/radial/: README.md  __init__.py  bernstein.py  cutoff.py  laplacian_eigenstates.py  physical_basis.py  spliner.py
spex/radial/cutoff/: shifted_cosine.py  step.py
spex/radial/physical/: __init__.py  laplacian_eigenstates.py  physical_basis.py  spliner.py  trimmed_and_splined.py
spex/radial/simple/: __init__.py  chebyshev.py  gaussian.py  jacobi.py  simple.py
spex/species/: __init__.py  alchemical.py  orthogonal.py
tests/: test_angular.py  test_chebyshev.py  test_gaussian.py  test_jacobi.py  test_laplacian_eigenstates.py  test_metatensor_soap_power_spectrum.py  test_metatensor_spherical_expansion.py  test_physical_basis.py  test_species.py  test_spherical_expansion.py  tmp_bulk.npz  tmp_mol.npz  utils.py
