[tool.poetry]
name = "spex"
version = "0.1.0"
description = "a clean-slate rewrite of torch-spex"
authors = ["Marcel Langer <dev@marcel.science>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
numpy = "*"
PyYAML = "*"
scipy = {version = "*", optional = true}
pytest = {version = "*", optional = true}
ruff = {version = "*", optional = true}
ase = {version = "*", optional = true}

[tool.poetry.extras]
dev = ["pytest", "ruff", "ase"]
le = ["scipy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 92

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # isort
    "I",
]

# E741: don't worry about short variable names
# E731: don't worry about lambdas
ignore = ["E741", "E731"]

[tool.ruff.lint.isort]
section-order = ["numpy", "torch", "future", "standard-library", "third-party", "first-party", "local-folder"]
no-lines-before = ["torch"]

[tool.ruff.lint.isort.sections]
"numpy" = ["numpy"]
"torch" = ["torch"]

[tool.ruff.lint.extend-per-file-ignores]
# E402: don't worry about the order of imports
"__init__.py" = ["E402"]
